--- a/bibliography/Papiers_Leo.bib
+++ b/bibliography/Papiers_Leo.bib
@@ -10,15 +10,15 @@
 	number = {n/a},
 	urldate = {2022-12-30},
 	journal = {Ecography},
-	author = {Gaüzère, Pierre and Blonder, Benjamin and Denelle, Pierre and Fournier, Bertrand and Grenié, Matthias and Delalandre, Léo and Münkemüller, Tamara and Munoz, Francois and Violle, Cyrille and Thuiller, Wilfried},
+	author = {Gaüzère, Pierre and Blonder, Benjamin and Denelle, Pierre and Fournier, Bertrand and Grenié, Matthias and \textbf{Delalandre}, Léo and Münkemüller, Tamara and Munoz, Francois and Violle, Cyrille and Thuiller, Wilfried},
 	year = {2022},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ecog.06504},
 	keywords = {community ecology, trait-based ecology, leaf traits, ecological originality},
 	pages = {e06504},
-	file = {Full Text PDF:C\:\\Users\\delalandre\\Zotero\\storage\\HDJH97IF\\Gaüzère et al. - The functional trait distinctiveness of plant spec.pdf:application/pdf;Snapshot:C\:\\Users\\delalandre\\Zotero\\storage\\NPPRJNSG\\ecog.html:text/html},
+	file = {Full Text PDF:C\:\\Users\\\textbf{Delalandre}\\Zotero\\storage\\HDJH97IF\\Gaüzère et al. - The functional trait distinctiveness of plant spec.pdf:application/pdf;Snapshot:C\:\\Users\\\textbf{Delalandre}\\Zotero\\storage\\NPPRJNSG\\ecog.html:text/html},
 }
 
-@article{delalandre2018PerspectivesinPlantEcologyEvolutionandSystematics,
+@article{Delalandre2018PerspectivesinPlantEcologyEvolutionandSystematics,
 	title = {Can co-occurrence networks predict plant-plant interactions in a semi-arid gypsum community?},
 	volume = {31},
 	issn = {1433-8319},
@@ -28,12 +28,12 @@
 	language = {en},
 	urldate = {2022-12-30},
 	journal = {Perspectives in Plant Ecology, Evolution and Systematics},
-	author = {Delalandre, Léo and Montesinos-Navarro, Alicia},
+	author = {\textbf{Delalandre}, Léo and Montesinos-Navarro, Alicia},
 	month = apr,
 	year = {2018},
 	keywords = {Spatial scale, Bayesian network inferences, Biotic interaction, Co-occurrence, Gypsum, Plant community ecology},
 	pages = {36--43},
-	file = {ScienceDirect Full Text PDF:C\:\\Users\\delalandre\\Zotero\\storage\\Q6YNQRIJ\\Delalandre et Montesinos-Navarro - 2018 - Can co-occurrence networks predict plant-plant int.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\delalandre\\Zotero\\storage\\V457CCSB\\S1433831917301427.html:text/html},
+	file = {ScienceDirect Full Text PDF:C\:\\Users\\\textbf{Delalandre}\\Zotero\\storage\\Q6YNQRIJ\\\textbf{Delalandre} et Montesinos-Navarro - 2018 - Can co-occurrence networks predict plant-plant int.pdf:application/pdf;ScienceDirect Snapshot:C\:\\Users\\\textbf{Delalandre}\\Zotero\\storage\\V457CCSB\\S1433831917301427.html:text/html},
 }
 
 @article{verdu2022Ecology,
@@ -48,15 +48,15 @@
 	number = {n/a},
 	urldate = {2023-01-04},
 	journal = {Ecology},
-	author = {Verdú, Miguel and Garrido, Jose L. and Alcántara, Julio M. and Montesinos-Navarro, Alicia and Aguilar, Salomón and Aizen, Marcelo A. and Al-Namazi, Ali A. and Alifriqui, Mohamed and Allen, David and Anderson-Teixeira, Kristina J. and Armas, Cristina and Bastida, Jesús M. and Bellido, Tono and Bonanomi, Giuliano and Paterno, Gustavo B. and Briceño, Herbert and de Oliveira, Ricardo A. C. and Campoy, Josefina G. and Chaieb, Ghassen and Chu, Chengjin and Collins, Sarah E. and Condit, Richard and Constantinou, Elena and Degirmenci, Cihan Ü. and Delalandre, Leo and Duarte, Milen and Faife, Michel and Fazlioglu, Fatih and Fernando, Edwino S. and Flores, Joel and Flores-Olvera, Hilda and Fodor, Ecaterina and Ganade, Gislene and Garcia, María Begoña and García-Fayos, Patricio and Gavini, Sabrina S. and Goberna, Marta and Gómez-Aparicio, Lorena and González-Pendás, Enrique and González-Robles, Ana and Hubbell, Stephen P. and İpekdal, Kahraman and Jorquera, María J. and Kikvidze, Zaal and Kütküt, Pınar and Ledo, Alicia and Lendínez, Sandra and Li, Buhang and Liu, Hanlun and Lloret, Francisco and López, Ramiro P. and López-García, Álvaro and Lortie, Christopher J. and Losapio, Gianalberto and Lutz, James A. and Luzuriaga, Arantzazu L. and Máliš, František and Manrique, Esteban and Manzaneda, Antonio J. and Marcilio-Silva, Vinicius and Michalet, Richard and Molina-Venegas, Rafael and Navarro-Cano, José Antonio and Novotny, Vojtech and Olesen, Jens M. and Ortiz-Brunel, Juan P. and Pajares-Murgó, María and Parissis, Nikolas and Parker, Geoffrey and Perea, Antonio J. and Pérez-Hernández, Vidal and Pérez-Navarro, María Ángeles and Pistón, Nuria and Pizarro-Carbonell, Elisa and Prieto, Iván and Prieto-Rubio, Jorge and Pugnaire, Francisco I. and Ramírez, Nelson and Retuerto, Rubén and Rey, Pedro J. and Rodriguez Ginart, Daniel A. and Rodríguez-Sánchez, Mariana and Sánchez-Martín, Ricardo and Schöb, Christian and Tavşanoğlu, Çağatay and Tedoradze, Giorgi and Tercero-Araque, Amanda and Tielbörger, Katja and Touzard, Blaise and Tüfekcioğlu, İrem and Turkis, Sevda and Usero, Francisco M. and Usta, Nurbahar and Valiente-Banuet, Alfonso and Vargas-Colin, Alexia and Vogiatzakis, Ioannis and Zamora, Regino},
+	author = {Verdú, Miguel and Garrido, Jose L. and Alcántara, Julio M. and Montesinos-Navarro, Alicia and Aguilar, Salomón and Aizen, Marcelo A. and Al-Namazi, Ali A. and Alifriqui, Mohamed and Allen, David and Anderson-Teixeira, Kristina J. and Armas, Cristina and Bastida, Jesús M. and Bellido, Tono and Bonanomi, Giuliano and Paterno, Gustavo B. and Briceño, Herbert and de Oliveira, Ricardo A. C. and Campoy, Josefina G. and Chaieb, Ghassen and Chu, Chengjin and Collins, Sarah E. and Condit, Richard and Constantinou, Elena and Degirmenci, Cihan Ü. and \textbf{Delalandre}, Leo and Duarte, Milen and Faife, Michel and Fazlioglu, Fatih and Fernando, Edwino S. and Flores, Joel and Flores-Olvera, Hilda and Fodor, Ecaterina and Ganade, Gislene and Garcia, María Begoña and García-Fayos, Patricio and Gavini, Sabrina S. and Goberna, Marta and Gómez-Aparicio, Lorena and González-Pendás, Enrique and González-Robles, Ana and Hubbell, Stephen P. and İpekdal, Kahraman and Jorquera, María J. and Kikvidze, Zaal and Kütküt, Pınar and Ledo, Alicia and Lendínez, Sandra and Li, Buhang and Liu, Hanlun and Lloret, Francisco and López, Ramiro P. and López-García, Álvaro and Lortie, Christopher J. and Losapio, Gianalberto and Lutz, James A. and Luzuriaga, Arantzazu L. and Máliš, František and Manrique, Esteban and Manzaneda, Antonio J. and Marcilio-Silva, Vinicius and Michalet, Richard and Molina-Venegas, Rafael and Navarro-Cano, José Antonio and Novotny, Vojtech and Olesen, Jens M. and Ortiz-Brunel, Juan P. and Pajares-Murgó, María and Parissis, Nikolas and Parker, Geoffrey and Perea, Antonio J. and Pérez-Hernández, Vidal and Pérez-Navarro, María Ángeles and Pistón, Nuria and Pizarro-Carbonell, Elisa and Prieto, Iván and Prieto-Rubio, Jorge and Pugnaire, Francisco I. and Ramírez, Nelson and Retuerto, Rubén and Rey, Pedro J. and Rodriguez Ginart, Daniel A. and Rodríguez-Sánchez, Mariana and Sánchez-Martín, Ricardo and Schöb, Christian and Tavşanoğlu, Çağatay and Tedoradze, Giorgi and Tercero-Araque, Amanda and Tielbörger, Katja and Touzard, Blaise and Tüfekcioğlu, İrem and Turkis, Sevda and Usero, Francisco M. and Usta, Nurbahar and Valiente-Banuet, Alfonso and Vargas-Colin, Alexia and Vogiatzakis, Ioannis and Zamora, Regino},
 	year = {2022},
 	note = {\_eprint: https://esajournals.onlinelibrary.wiley.com/doi/pdf/10.1002/ecy.3923},
 	keywords = {recruitment, ecological networks, plant–plant interactions, facilitation, replacement},
 	pages = {e3923},
-	file = {Full Text PDF:C\:\\Users\\delalandre\\Zotero\\storage\\BMVAKW2Q\\Verdú et al. - RecruitNet A global database of plant recruitment.pdf:application/pdf;Snapshot:C\:\\Users\\delalandre\\Zotero\\storage\\UQQA8RP5\\ecy.html:text/html;Verdú et al. - 2023 - RecruitNet.pdf:C\:\\Users\\delalandre\\Zotero\\storage\\J29QIAEK\\Verdú et al. - 2023 - RecruitNet.pdf:application/pdf},
+	file = {Full Text PDF:C\:\\Users\\\textbf{Delalandre}\\Zotero\\storage\\BMVAKW2Q\\Verdú et al. - RecruitNet A global database of plant recruitment.pdf:application/pdf;Snapshot:C\:\\Users\\\textbf{Delalandre}\\Zotero\\storage\\UQQA8RP5\\ecy.html:text/html;Verdú et al. - 2023 - RecruitNet.pdf:C\:\\Users\\\textbf{Delalandre}\\Zotero\\storage\\J29QIAEK\\Verdú et al. - 2023 - RecruitNet.pdf:application/pdf},
 }
 
-@article{delalandre2022ProcRSocB,
+@article{Delalandre2022ProcRSocB,
 	title = {Functionally distinct tree species support long-term productivity in extreme environments},
 	volume = {289},
 	issn = {0962-8452, 1471-2954},
@@ -67,10 +67,10 @@
 	number = {1967},
 	urldate = {2023-05-17},
 	journal = {Proceedings of the Royal Society B: Biological Sciences},
-	author = {Delalandre, Léo and Gaüzère, Pierre and Thuiller, Wilfried and Cadotte, Marc and Mouquet, Nicolas and Mouillot, David and Munoz, François and Denelle, Pierre and Loiseau, Nicolas and Morin, Xavier and Violle, Cyrille},
+	author = {\textbf{Delalandre}, Léo and Gaüzère, Pierre and Thuiller, Wilfried and Cadotte, Marc and Mouquet, Nicolas and Mouillot, David and Munoz, François and Denelle, Pierre and Loiseau, Nicolas and Morin, Xavier and Violle, Cyrille},
 	year = {2022},
 	pages = {20211694},
-	file = {Delalandre et al. - 2022 - Functionally distinct tree species support long-te.pdf:C\:\\Users\\delalandre\\Zotero\\storage\\H9GTVGF4\\Delalandre et al. - 2022 - Functionally distinct tree species support long-te.pdf:application/pdf},
+	file = {\textbf{Delalandre} et al. - 2022 - Functionally distinct tree species support long-te.pdf:C\:\\Users\\\textbf{Delalandre}\\Zotero\\storage\\H9GTVGF4\\\textbf{Delalandre} et al. - 2022 - Functionally distinct tree species support long-te.pdf:application/pdf},
 }
 
 @article{munoz2023EcolLett,
@@ -85,9 +85,9 @@
 	number = {n/a},
 	urldate = {2023-06-16},
 	journal = {Ecology Letters},
-	author = {Munoz, François and Klausmeier, Christopher A. and Gaüzère, Pierre and Kandlikar, Gaurav and Litchman, Elena and Mouquet, Nicolas and Ostling, Annette and Thuiller, Wilfried and Algar, Adam C. and Auber, Arnaud and Cadotte, Marc W. and Delalandre, Léo and Denelle, Pierre and Enquist, Brian J. and Fortunel, Claire and Grenié, Matthias and Loiseau, Nicolas and Mahaut, Lucie and Maire, Anthony and Mouillot, David and Pimiento, Catalina and Violle, Cyrille and Kraft, Nathan J. B.},
+	author = {Munoz, François and Klausmeier, Christopher A. and Gaüzère, Pierre and Kandlikar, Gaurav and Litchman, Elena and Mouquet, Nicolas and Ostling, Annette and Thuiller, Wilfried and Algar, Adam C. and Auber, Arnaud and Cadotte, Marc W. and \textbf{Delalandre}, Léo and Denelle, Pierre and Enquist, Brian J. and Fortunel, Claire and Grenié, Matthias and Loiseau, Nicolas and Mahaut, Lucie and Maire, Anthony and Mouillot, David and Pimiento, Catalina and Violle, Cyrille and Kraft, Nathan J. B.},
 	year = {2023},
 	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/ele.14265},
 	keywords = {coexistence, community assembly, ecological interactions, fitness landscape, functional traits, source-sink dynamics},
-	file = {Full Text PDF:C\:\\Users\\delalandre\\Zotero\\storage\\S8FWX53U\\Munoz et al. - The ecological causes of functional distinctivenes.pdf:application/pdf;Snapshot:C\:\\Users\\delalandre\\Zotero\\storage\\ZXDCN3DW\\ele.html:text/html},
+	file = {Full Text PDF:C\:\\Users\\\textbf{Delalandre}\\Zotero\\storage\\S8FWX53U\\Munoz et al. - The ecological causes of functional distinctivenes.pdf:application/pdf;Snapshot:C\:\\Users\\\textbf{Delalandre}\\Zotero\\storage\\ZXDCN3DW\\ele.html:text/html},
 }
